--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -39,9 +39,11 @@
               <td><%= page.body_snippet %></td>  
               <% if page.pageable_type == "Question" %>
                <td> <%= link_to '<i class="fa fa-eye"> Preview</i>'.html_safe, admin_subject_question_path(@subject, page.pageable) %></td>
+               <td><%= link_to '<i class="fa fa-wrench"></i>'.html_safe, edit_admin_subject_question_path(@subject, page.pageable), title:"Edit Question Page" %></td> 
                 <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_page_path(@subject, page), data: {confirm: "Are you sure?"}, method: :delete, remote: true, title:"Delete Question Page" %></td>
                 <% elsif page.pageable_type == "Instruction" %>
                <td> <%= link_to '<i class="fa fa-eye"> Preview</i>'.html_safe, admin_subject_instruction_path(@subject, page.pageable) %></td>
+                <td><%= link_to '<i class="fa fa-wrench"></i>'.html_safe, edit_admin_subject_instruction_path(@subject, page.pageable), title:"Edit Instruction Page" %></td> 
                 <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_page_path(@subject, page), data: {confirm: "Are you sure?"}, method: :delete, remote: true, title:"Delete Instruction Page" %></td>
                 <% end %>
             </tr>
