--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -1,10 +1,13 @@
 <% content_for(:body_id, "admin-pages") %> 
 
+
+
   <div class="columns large-12">
    <h2 class='page-title'>All Lessons</h2>
    <div class="center-buttons"><a href="<%= admin_users_path %>" class=" button">View Users</a>
     <a href="<%= new_post_path %>" class=" button">Write Blog Post</a>
    </div>
+   <h4 class="center-buttons">  <%= flash.alert %> </h4>
 </div>
    
    
@@ -13,6 +16,7 @@
     <div class="large-4 columns">
       <div class="panel">
         <h3>Math</h3>
+        
         <a href="#" class="show-lesson-form tiny button">New Lesson</a>
         <%= render 'admin/subjects/new_math_form', subject: @subject %>
         <table width="100%">
@@ -33,6 +37,7 @@
     <div class="large-4 columns">
       <div class="panel">
         <h3>Critical Reading</h3>
+        
         <a href="#" class="show-lesson-form tiny button">New Lesson</a>
         <%= render 'admin/subjects/new_reading_form', subject: @subject %>
         <table width="100%">
@@ -56,6 +61,7 @@
     <div class="large-4 columns">
       <div class="panel">
         <h3>Writing</h3>
+
         <a href="#" class="show-lesson-form tiny button">New Lesson</a>
         <%= render 'admin/subjects/new_writing_form', subject: @subject %>
         <table width="100%">
